syntax = "proto3";
package user;

import "google/protobuf/timestamp.proto";
import "common_event.proto";

message UserEventEnvelope {
  common.EventMeta meta = 1;

  oneof event {
    UserRegisteredEvent user_registered = 10;
    UserSubscribedEvent user_subscribed = 11;

    UserEmailChangedEvent user_email_changed = 12;

    UserFollowedEvent user_followed = 13;
    UserUnfollowedEvent user_unfollowed = 14;

    UserProfileUpdatedEvent user_profile_updated = 15;
  }
}

message UserRegisteredEvent {
  int64 user_id = 1;
  string email = 2;
  optional string name = 3;
  google.protobuf.Timestamp registered_at = 4;
}

message UserSubscribedEvent {
  int64 user_id = 1;
  string plan_id = 2;
  optional google.protobuf.Timestamp subscription_until = 3;
  google.protobuf.Timestamp subscribed_at = 4;
}

message UserFollowedEvent {
  int64 follower_id = 1;
  int64 followee_id = 2;
  google.protobuf.Timestamp followed_at = 3;
}

message UserEmailChangedEvent {
  int64 user_id = 1;
  string new_email = 2;
  google.protobuf.Timestamp changed_at = 3;
}

message UserUnfollowedEvent {
  int64 follower_id = 1;
  int64 followee_id = 2;
  google.protobuf.Timestamp unfollowed_at = 3;
}

message UserProfileUpdatedEvent {
  int64 user_id = 1;
  optional string new_name = 2;
  optional string new_profile_photo_url = 3;
  google.protobuf.Timestamp updated_at = 4;
}
